--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
