--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -13,7 +13,8 @@
     "@popperjs/core": "^2.11.8",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-quill-new": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
