how the hell did this change

--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -19,7 +19,7 @@
     "papaparse": "^5.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
     "viem": "^2.21.53",
     "wagmi": "^2.13.3"
   },
