--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -15,13 +15,16 @@
     "@wagmi/chains": "^1.8.0",
     "@wagmi/core": "^2.15.2",
     "@web3modal/wagmi": "^4.2.3",
+    "chart.js": "^2.9.4",
+    "firebase": "^11.0.2",
     "next": "15.0.3",
     "papaparse": "^5.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-quill-new": "^3.3.3",
     "viem": "^2.21.53",
-    "wagmi": "^2.13.3"
+    "wagmi": "^2.13.3",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
