--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.0.2",
     "next": "15.0.3",
     "papaparse": "^5.4.1",
+    "pino-pretty": "^13.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-quill-new": "^3.3.3",
