Send Email button implemented

--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -17,8 +17,11 @@
     "@web3modal/wagmi": "^4.2.3",
     "chart.js": "^2.9.4",
     "firebase": "^11.0.2",
+    "fs": "^0.0.1-security",
     "next": "15.0.3",
+    "nodemailer": "^6.9.16",
     "papaparse": "^5.4.1",
+    "pdfkit": "^0.15.1",
     "pino-pretty": "^13.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
