--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@popperjs/core": "^2.11.8",
+    "@rainbow-me/rainbowkit": "^2.2.1",
+    "@requestnetwork/payment-processor": "^0.49.0",
+    "@requestnetwork/payment-widget": "^0.3.2",
+    "@requestnetwork/request-client.js": "^0.51.0",
     "@tanstack/react-query": "^5.62.2",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.13",
     "@wagmi/chains": "^1.8.0",
     "@wagmi/core": "^2.15.2",
     "@web3modal/wagmi": "^4.2.3",
     "chart.js": "^2.9.4",
+    "ethers": "^5.7.2",
     "firebase": "^11.0.2",
     "fs": "^0.0.1-security",
     "next": "15.0.3",
@@ -23,9 +30,10 @@
     "papaparse": "^5.4.1",
     "pdfkit": "^0.15.1",
     "pino-pretty": "^13.0.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-quill-new": "^3.3.3",
+    "typescript": "^5.7.2",
     "viem": "^2.21.53",
     "wagmi": "^2.13.3",
     "zustand": "^5.0.2"
